# MMRG

./: .gitignore  README-ReviewGen.md  README.md
AIReviewerArena/: README.md  pyproject.toml  requirements.txt
AIReviewerArena/ai_reviewer_arena/: Analysis.ipynb  ELO.ipynb  app.py  elo_system.py  papers.py  reviewers.py  sessions.py  utils.py  votes.py
AIReviewerArena/ai_reviewer_arena/configs/: app_cfg.py  logging_cfg.py
AIReviewerArena/ai_reviewer_arena/mock_data/: votes_data.py
AIReviewerArena/ai_reviewer_arena/tests/: test_elo_system.py  test_paper_registry.py  test_review_eval_weights.py  test_session.py  test_session_registry.py  test_votes.py
mmrg/: figure_critic.py  novelty_assessment.py  pdf_processor.py  reviewer_workflow.py  schemas.py
mmrg/custom_crewai/: task.py
mmrg/custom_crewai_tools/: __init__.py  figure_tool.py  file_read_tool_utf8.py  novelty_tool.py  text_container_tool.py
mmrg/doc2json/: s2orc.py
mmrg/doc2json/grobid2json/: tei_to_json.py
mmrg/docker/grobid/: Dockerfile
mmrg/review_generator/: baselines.py  multi_agent_reviewer.py
mmrg/utils/: __init__.py
